--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;400&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "Outfit", BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  font-size: 1.5rem;
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+.app {
+  width: 100%;
+  height: 100vhs;
+
+  position: relative;
+
+  color: #fff;
+}
+
+.app::before {
+  content: "";
+  background: url("../public/image/background.png") no-repeat center
+    center/cover;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 1rem;
+}
+
+.search {
+  text-align: center;
+}
+
+.input {
+  padding: 0.5rem;
+  border-radius: 10px;
+  border: 1px solid;
+  color: white;
+  background-color: rgba(63,80,55,-46.7);
+  box-shadow: rgba(0, 0, 0, 0.25) 
+  0px 54px 55px, rgba(0, 0, 0, 0.12) 
+  0px -12px 30px, rgba(0, 0, 0, 0.12) 
+  0px 4px 6px, rgba(0, 0, 0, 0.17) 
+  0px 12px 13px, rgba(0, 0, 0, 0.09) 
+  0px -3px 5px;
+}
+
+.input::-webkit-input-placeholder {
+  color: white;
+  font-weight: bold;
+}
+
+.top {
+  text-align: center;
+}
+
+.bottom {
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  background-color: rgba(125,30,0,0.3);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 
+  0px 54px 55px, rgba(0, 0, 0, 0.12) 
+  0px -12px 30px, rgba(0, 0, 0, 0.12) 
+  0px 4px 6px, rgba(0, 0, 0, 0.17) 
+  0px 12px 13px, rgba(0, 0, 0, 0.09) 
+  0px -3px 5px;
 }
